<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fifth_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@android:drawable/btn_star"
                android:fontFamily="@font/acme"
                android:text=" Recommended for you"
                android:textColor="#673AB7"
                android:textSize="21sp" />


            <!-- Buttons 1 and 2 -->

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="Gender"
                android:background="#D19908"
                android:layout_marginTop="15dp"
                android:textColor="#A80B40"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:id="@+id/firstbuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="@drawable/btn1" /> <!-- Replace with your button text -->

                    <TextView
                        android:id="@+id/title1"
                        tools:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/Title_1"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_gravity="center"/> <!-- Replace with your title -->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="@drawable/btn2" /> <!-- Replace with your button text -->

                    <TextView
                        android:id="@+id/title2"
                        tools:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/acme"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:text="@string/Title_2"
                        android:textColor="#000000" /> <!-- Replace with your title -->

                </LinearLayout>

            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:adSize="SMART_BANNER"
                app:adUnitId="ca-app-pub-5729388434628876/1118218540"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#D19908"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="Face color"
                android:layout_marginTop="15dp"
                android:textColor="#A80B40"
                android:textSize="28sp"
                android:textStyle="bold|italic" />

            <!-- Buttons 3 and 4 -->

            <LinearLayout
                android:id="@+id/secondbuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="@drawable/btn3" /> <!-- Replace with your button text -->

                    <TextView
                        android:id="@+id/title3"
                        tools:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/Title_3"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_gravity="center" /> <!-- Replace with your title -->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="@drawable/btn4" /> <!-- Replace with your button text -->

                    <TextView
                        android:id="@+id/title4"
                        tools:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/acme"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:text="@string/Title_4"
                        android:textColor="#000000" /> <!-- Replace with your title -->

                </LinearLayout>

            </LinearLayout>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="Hair"
                android:layout_marginTop="65dp"
                android:background="#D19908"
                android:textColor="#A80B40"
                android:textSize="28sp"
                android:textStyle="bold|italic" />

            <!-- Buttons 5 and 6 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="@drawable/btn5" /> <!-- Replace with your button text -->

                    <TextView
                        android:id="@+id/title5"
                        tools:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/Title_5"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_gravity="center" /> <!-- Replace with your title -->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="@drawable/btn6" /> <!-- Replace with your button text -->

                    <TextView
                        android:id="@+id/title6"
                        tools:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/Title_6"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_gravity="center"/> <!-- Replace with your title -->

                </LinearLayout>

            </LinearLayout>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="Sunglasses"
                android:layout_marginTop="65dp"
                android:background="#D19908"
                android:textColor="#A80B40"
                android:textSize="28sp"
                android:textStyle="bold|italic" />

            <!-- Buttons 7 and 8 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="@drawable/btn7" />

                    <TextView
                        android:id="@+id/title7"
                        tools:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/Title_7"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="@drawable/btn8" />

                    <TextView
                        android:id="@+id/title8"
                        tools:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/Title_8"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_gravity="center" />

                </LinearLayout>

            </LinearLayout>
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:adSize="SMART_BANNER"
                app:adUnitId="ca-app-pub-5729388434628876/1118218540"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="Accessories"
                android:layout_marginTop="65dp"
                android:background="#D19908"
                android:textColor="#A80B40"
                android:textSize="28sp"
                android:textStyle="bold|italic" />

            <!-- Buttons 9 and 10 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button9"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="@drawable/btn9" />

                    <TextView
                        android:id="@+id/title9"
                        tools:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/Title_9"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button10"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:background="@drawable/btn10" />

                    <TextView
                        android:id="@+id/title10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/Title_10"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        tools:gravity="center" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
